--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@ Which meals did you have during your stay?
 <br>
 <input type="submit" value="Submit my Answers" id="submit">
 </form>
+<br>
+<br>
+<p>Thanks for visiting, we hope to see you again soon!</p>
 
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
