--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@ Which meals did you have during your stay?
 <br>
 <br>
 <p>Thanks for visiting, we hope to see you again soon!</p>
+<br>
+<p>Survey Form by Thomas Falvey 2020</p>
 
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
